<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_floating_text"
            android:title="@string/nav_floating_text"/>

        <item
            android:id="@+id/nav_fps"
            android:title="@string/nav_fps"/>

        <item
            android:id="@+id/nav_battery"
            android:title="@string/nav_battery"/>

        <item
            android:id="@+id/nav_clock"
            android:title="@string/nav_clock"/>

        <item
            android:id="@+id/nav_crosshair"
            android:title="@string/nav_crosshair"/>

        <item
            android:id="@+id/nav_memory"
            android:title="@string/nav_memory"/>

        <item
            android:id="@+id/nav_logo"
            android:title="@string/nav_logo"/>

        <item
            android:id="@+id/nav_debuging"
            android:title="@string/nav_debuging"/>

    </group>

</menu>
